Removed the paging settings from the filter-by-tab cells because they are not relevant to those examples.

--- a/notebooks/sinequa_api.ipynb
+++ b/notebooks/sinequa_api.ipynb
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "9fe0ab5a",
    "metadata": {},
    "outputs": [
@@ -629,8 +629,6 @@
     "    \"query\": {\n",
     "        \"name\": QAPP, # replace with your query app name\n",
     "        \"text\": query, # replace with your query\n",
-    "        \"pageSize\": 20,\n",
-    "        \"page\": 2,\n",
     "        \"tab\": \"Images\", # <--- Enter tab label\n",
     "    },\n",
     "}\n",
@@ -655,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "3eb482d3",
    "metadata": {},
    "outputs": [
@@ -663,74 +661,90 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response has 20 records\n",
+      "Response has 10 records\n",
       "First record:\n",
       "{'collection': ['/SMD_Planetary/PDS_API_Dataset_Only/'],\n",
       " 'databasealias': 'NASA_PDS',\n",
       " 'docformat': 'htm',\n",
       " 'documentweight': 'default',\n",
-      " 'extracts': [{'highlighted': '4 {b}OSIRIS{nb} - NARROW ANGLE CAMERA Not '\n",
+      " 'extracts': [{'highlighted': 'ROSETTA {b}OSIRIS{nb} SHAPE MODELS OF COMET '\n",
+      "                              '67P/C-G '\n",
+      "                              'urn:nasa:pds:context_pds3:data_set:data_set.ro-c-osinac-osiwac-5-67p-shape-v1.',\n",
+      "               'locations': '0,123',\n",
+      "               'originalLocations': '1170,459',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '0 {b}OSIRIS{nb} - WIDE ANGLE CAMERA ',\n",
+      "               'locations': '696,29',\n",
+      "               'originalLocations': '4288,133',\n",
+      "               'score': '49152'},\n",
+      "              {'highlighted': '{b}OSIRIS{nb} - NARROW ANGLE CAMERA Not '\n",
       "                              'Provided INTERNATIONAL ROSETTA MISSION Not '\n",
-      "                              'Provided 2019-01-11T00:00:00Z SFH 2010-11-12 '\n",
-      "                              'Product_Data_Set_PDS3 Not Provided Not Provided '\n",
-      "                              'Not Provided Not Provided PDS3 Not Provided Not '\n",
-      "                              'Provided Not Provided Not Provided '\n",
-      "                              'Product_Data_Set_PDS3 '\n",
-      "                              'https://archives.esac.esa.int/psa/pdap/metadata?DATA_SET_ID=RO-X-OSINAC-2-CR4B-CRUISE4B-V1.4&RETURN_TYPE=HTML '\n",
-      "                              'Not Provided '\n",
-      "                              'urn:esa:psa:context_pds3:resource:resource.ro-x-osinac-2-cr4b-cruise4b-v1.',\n",
-      "               'locations': '566,473',\n",
-      "               'originalLocations': '4096,2810',\n",
+      "                              'Provided 2015-01-11T23:20:32Z 2015-01-08 '\n",
+      "                              'A.C.Raugh Creation Product_Data_Set_PDS3 Not '\n",
+      "                              'Provided Not Provided Not Provided Not Provided '\n",
+      "                              'PDS3 Not Provided Not Provided Not Provided Not '\n",
+      "                              'Provided Product_Data_Set_PDS3 '\n",
+      "                              '/ds-view/pds/viewDataset.jsp?',\n",
+      "               'locations': '725,318',\n",
+      "               'originalLocations': '4421,2326',\n",
       "               'score': '49152'},\n",
-      "              {'highlighted': '724Z ROSETTA-ORBITER CRUISE 4-2 OSINAC 2 EDR '\n",
-      "                              'data Science and calibration images acquired by '\n",
-      "                              'the {b}OSIRIS{nb} Narrow Angle Camera on the '\n",
-      "                              'rosetta spacecraft during the CRUISE 4-2 '\n",
-      "                              'mission phase 1.0',\n",
-      "               'locations': '1184,189',\n",
-      "               'originalLocations': '7585,487',\n",
-      "               'score': '49152'},\n",
-      "              {'highlighted': '4 Product_Data_Set_PDS3 PDS3 esa Not Provided '\n",
-      "                              'Not Provided Hviid, S. F., Keller H. U. and the '\n",
-      "                              '{b}OSIRIS{nb} Team, {b}OSIRIS{nb} ROSETTA '\n",
-      "                              'EXPERIMENT DATA RECORD V1.',\n",
-      "               'locations': '119,148',\n",
-      "               'originalLocations': '1625,784',\n",
+      "              {'highlighted': '547Z ROSETTA {b}OSIRIS{nb} SHAPE MODELS OF '\n",
+      "                              'COMET 67P/C-G Collected shape models of Comet '\n",
+      "                              '67P/Churyumov-Gerasimenko (1969 R1) produced by '\n",
+      "                              'the Rosetta mission.',\n",
+      "               'locations': '1399,150',\n",
+      "               'originalLocations': '7844,370',\n",
       "               'score': '49152'}],\n",
       " 'fileext': 'htm',\n",
       " 'filename': 'file.htm',\n",
       " 'flags': ['h', 't'],\n",
-      " 'globalrelevance': 0.864737,\n",
-      " 'id': '/SMD_Planetary/PDS_API_Dataset_Only/|67cfa87ecebb88de07eb264c53fbcd8f',\n",
-      " 'indexationtime': '2023-06-29 18:22:36',\n",
+      " 'globalrelevance': 0.872253,\n",
+      " 'id': '/SMD_Planetary/PDS_API_Dataset_Only/|3eb171af83ab9a31499d23e35eb01009',\n",
+      " 'indexationtime': '2023-06-29 19:07:37',\n",
       " 'language': ['en'],\n",
       " 'matchingpartnames': ['text'],\n",
       " 'matchlocationsperpartname': [{'matchlocations': []}],\n",
       " 'meaningrelevance': '1',\n",
-      " 'person': [{'count': 1,\n",
-      "             'display': 'Rosetta Mission',\n",
-      "             'value': 'ROSETTA MISSION'},\n",
+      " 'person': [{'count': 2,\n",
+      "             'display': 'Rosetta Osiris Shape',\n",
+      "             'value': 'ROSETTA OSIRIS SHAPE'},\n",
       "            {'count': 1,\n",
-      "             'display': 'Rosetta Osiris',\n",
-      "             'value': 'ROSETTA OSIRIS'}],\n",
-      " 'rank': 20,\n",
-      " 'relevantExtracts': '4 <b>OSIRIS </b>- NARROW ANGLE ... 724Z ROSETTA-ORBITER '\n",
-      "                     'CRUISE ... acquired by the <b>OSIRIS </b>Narrow Angle '\n",
-      "                     'Camera ... 4 Product_Data_Set_PDS3 PDS3 ... U. and the '\n",
-      "                     '<b>OSIRIS </b>Team, <b>OSIRIS </b>ROSETTA EXPERIMENT ',\n",
-      " 'size': 8174,\n",
+      "             'display': 'Claire Capanna',\n",
+      "             'value': 'CLAIRE CAPANNA'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Frank Preusker',\n",
+      "             'value': 'FRANK PREUSKER'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Frank Scholten',\n",
+      "             'value': 'FRANK SCHOLTEN'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Pedro Gutierrez',\n",
+      "             'value': 'PEDRO GUTIERREZ'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Robert Gaskell',\n",
+      "             'value': 'ROBERT GASKELL'},\n",
+      "            {'count': 1,\n",
+      "             'display': 'Rosetta Mission',\n",
+      "             'value': 'ROSETTA MISSION'}],\n",
+      " 'rank': 0,\n",
+      " 'relevantExtracts': 'ROSETTA <b>OSIRIS </b>SHAPE MODELS OF ... 67P/C-G '\n",
+      "                     'urn:nasa:pds:context_pds3:data_set:data_set.ro-c-osinac-osiwac-5-67p-shape-v1.... '\n",
+      "                     '0 <b>OSIRIS </b>- WIDE ... ... <b>OSIRIS </b>- NARROW '\n",
+      "                     'ANGLE ... /ds-view/pds/viewDataset.jsp?... 547Z ROSETTA '\n",
+      "                     '<b>OSIRIS </b>SHAPE MODELS OF ... mission.',\n",
+      " 'size': 8419,\n",
       " 'sourcestr56': 'Data',\n",
       " 'termspresence': [{'presence': 'found', 'term': 'osiris'}],\n",
-      " 'thumbnailUrl': '/xdownload/thumbnail/%257B%2522app%2522%253A%2522nasa-sba-smd%2522%252C%2522id%2522%253A%2522%255C%252FSMD_Planetary%255C%252FPDS_API_Dataset_Only%255C%252F%257C67cfa87ecebb88de07eb264c53fbcd8f%2522%257D/file.jpg',\n",
-      " 'title': 'ROSETTA-ORBITER CRUISE 4-2 OSINAC 2 EDR data '\n",
-      "          'urn:esa:psa:context_pds3:data_set:data_set.ro-x-osinac-2-cr4b-cruise4b-v1.4 '\n",
-      "          'Product...',\n",
+      " 'thumbnailUrl': '/xdownload/thumbnail/%257B%2522app%2522%253A%2522nasa-sba-smd%2522%252C%2522id%2522%253A%2522%255C%252FSMD_Planetary%255C%252FPDS_API_Dataset_Only%255C%252F%257C3eb171af83ab9a31499d23e35eb01009%2522%257D/file.jpg',\n",
+      " 'title': 'ROSETTA OSIRIS SHAPE MODELS OF COMET 67P/C-G '\n",
+      "          'urn:nasa:pds:context_pds3:data_set:data_set.ro-c-osinac-osiwac-5-67p-shape-v1.0 '\n",
+      "          'Pro...',\n",
       " 'treepath': ['/Planetary Science/Data/Planetary Science Data (PDS)/'],\n",
-      " 'version': '65145e0ba6c799bc9347abb1c76088f7',\n",
+      " 'version': '1fdc791afa9b1e41b61b8a43f6255ee8',\n",
       " 'wordcountrelevance': '1',\n",
       " 'wordproximityrelevance': '1',\n",
-      " 'wordscorerelevance': '0.613525',\n",
-      " 'wordsrelevance': '0.864502'}\n"
+      " 'wordscorerelevance': '0.634766',\n",
+      " 'wordsrelevance': '0.87207'}\n"
      ]
     }
    ],
@@ -742,8 +756,6 @@
     "    \"query\": {\n",
     "        \"name\": QAPP, # replace with your query app name\n",
     "        \"text\": query, # replace with your query\n",
-    "        \"pageSize\": 20,\n",
-    "        \"page\": 2,\n",
     "        \"tab\": \"Data\", # <--- Enter tab label\n",
     "    },\n",
     "}\n",
